feat: worker that makes a recommendation based on metrics data, fix: modify the database
