# src/models/entities/metric.ts
@@ -1,0 +1,34 @@
+import { Entity, Column, ManyToOne,  } from "typeorm";
+import { BaseModel } from './base_model';
+import { Project } from "./project";
+
+
+@Entity()
+export class Metric extends BaseModel{
+
+    // @Column()
+    // type!: string
+    
+    @Column()
+    metric_name!:  string
+
+    @Column({type: 'timestamptz'})
+    time_stamp!: Date
+
+    // @Column({ type: 'jsonb'}) 
+    // labels!: any 
+
+    @Column({type: 'jsonb'})
+    metric!: any
+
+    @Column()
+    value: number
+
+    // @Column({type: 'jsonb'})
+    // extras!: any
+
+
+
+    @ManyToOne(() => Project, (project) => project.metrics)
+    project!: Project
+}
